--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ p{
   border: 1px solid black;
   padding: 0px;
   height: 300px;
+  max-width: 400px;
+  margin: auto;
   margin-bottom: 20px;
 }
 .demo-content h1{
